; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_html.c_rndr_tablerow.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_html.c_rndr_tablerow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf = type { i32, i32 }

@.str = private unnamed_addr constant [6 x i8] c"<tr>\0A\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"</tr>\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.buf*, %struct.buf*, i8*)* @rndr_tablerow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rndr_tablerow(%struct.buf* %0, %struct.buf* %1, i8* %2) #0 {
  %4 = alloca %struct.buf*, align 8
  %5 = alloca %struct.buf*, align 8
  %6 = alloca i8*, align 8
  store %struct.buf* %0, %struct.buf** %4, align 8
  store %struct.buf* %1, %struct.buf** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.buf*, %struct.buf** %4, align 8
  %8 = call i32 @BUFPUTSL(%struct.buf* %7, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %9 = load %struct.buf*, %struct.buf** %5, align 8
  %10 = icmp ne %struct.buf* %9, null
  br i1 %10, label %11, label %20

11:                                               ; preds = %3
  %12 = load %struct.buf*, %struct.buf** %4, align 8
  %13 = load %struct.buf*, %struct.buf** %5, align 8
  %14 = getelementptr inbounds %struct.buf, %struct.buf* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.buf*, %struct.buf** %5, align 8
  %17 = getelementptr inbounds %struct.buf, %struct.buf* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @bufput(%struct.buf* %12, i32 %15, i32 %18)
  br label %20

20:                                               ; preds = %11, %3
  %21 = load %struct.buf*, %struct.buf** %4, align 8
  %22 = call i32 @BUFPUTSL(%struct.buf* %21, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @BUFPUTSL(%struct.buf*, i8*) #1

declare dso_local i32 @bufput(%struct.buf*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
